# nao_footsteps

./: README.md
footstep_handler/: CMakeLists.txt  package.xml  setup.py
footstep_handler/config/: cost_params.yaml  footsteps.yaml  planning_params.yaml  rviz_footstep_planning.rviz
footstep_handler/launch/: footsteps.launch  rviz_footstep_planning.launch
footstep_handler/msg/: time_msg.msg
footstep_handler/nodes/: footsteps.py
footstep_handler/src/footstep_handler/: error.py  footstepHandler.py  footstepThr.py  footstepsPub.py  goalHandler.py  main  send_pose  stepQueue.py  strings.py  utils.py
footstep_planner/: CMakeLists.txt
footstep_planner/config/: rviz_footstep_planning.rviz
footstep_planner/include/footstep_planner/: EuclidianStepCost2.h  Footstep.h  FootstepPlanner.h  FootstepPlannerEnvironment.h  Heuristic.h  StepCostHeuristic.h
footstep_planner/launch/: footstep_navigation_nao_fake_loc.launch
footstep_planner/scripts/: corrected_initialpose.py
footstep_planner/src/: EuclidianStepCost2.cpp  Footstep.cpp  FootstepPlanner.cpp  FootstepPlannerEnvironment.cpp  PathCostHeuristic.cpp  StepCostHeuristic.cpp
sbpl/: CMakeLists.txt  package.xml  test.sh
sbpl/src/include/sbpl/: config.h
sbpl/src/include/sbpl/planners/: araplanner.h
sbpl/src/planners/: adplanner.cpp  araplanner.cpp
